Some minor renames, adjustments and improvements for some GUIs